Statements filtering on article detail: visual fixes on mobile

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,7 +1,7 @@
 @media (max-width: 449.9px) {
   .statements-filters {
     .speaker-veracities-filter {
-      .portrait {
+      .portrait-wrapper {
         display: none;
       }
 
