--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -1,27 +1,31 @@
 <% content_for(:title, @article.title) %>
 
-<article class="full-text">
-  <h1><%= @article.title %></h1>
-  <p class="lead"><%= raw(@article.perex) %></p>
+<article class="detail">
+  <section class="intro">
+    <h1><%= @article.title %></h1>
+    <p class="lead"><%= raw(@article.perex) %></p>
 
-  <% if @article_type == "factcheck" && @article.source %>
-    <p class="lead">
-      <span class="label factcheck">Ověřili jsme</span><br>
-      <%= @article.source.medium.name %> ze dne <%= raw(l(@article.source.released_at, format: :long)) %>
-      (moderátor <%= @article.source.media_personality.name %><% if @article.source.source_url %>, <a class="ext" href="<%= @article.source.source_url %>">záznam</a><% end %>)
-    </p>
-  <% end %>
+    <% if @article_type == "factcheck" && @article.source %>
+      <p class="lead">
+        <span class="label factcheck">Ověřili jsme</span><br>
+        <%= @article.source.medium.name %> ze dne <%= raw(l(@article.source.released_at, format: :long)) %>
+        (moderátor <%= @article.source.media_personality.name %><% if @article.source.source_url %>, <a class="ext" href="<%= @article.source.source_url %>">záznam</a><% end %>)
+      </p>
+    <% end %>
+  </section>
 
-  <section class="segment">
-    <% @article.segments.each do |segment| %>
+  <% @article.segments.each do |segment| %>
+    <section class="segment-<%= segment.segment_type %>">
       <% if segment.is_text? %>
         <%= raw(segment.text_html) %>
       <% else %>
         <% if @article.segments.size === 1 %>
-          <h2><%= segment.all_published_statements.count %> ověřených výroků</h2>
-
           <div class="statements-filters">
-            <span>Filtrujte výroky dle hodnocení</span>
+            <label>Filtrujte výroky dle hodnocení</label>
+
+            <% if not @statements_filters.empty? %>
+              <a href="<%= article_path(@article) %>" class="clear-filters" title="Zrušit filtr" aria-label="Zrušit filtr">× zrušit filtr</a>
+            <% end %>
 
             <% @article.unique_speakers.each do |speaker| %>
               <div class="speaker-veracities-filter">
@@ -45,7 +49,11 @@
                           </a>
                         <% else %>
                           <% link = is_active ? article_path(@article) : article_path(@article, { recnik: speaker.id, hodnoceni: veracity_url_value }) %>
-                          <a href="<%= link %>" title="<%= veracity_label %>" class="<%= veracity_key %>">
+                          <a
+                            href="<%= link %>"
+                            title="<%= veracity_label %>"
+                            class="<%= veracity_key %>"
+                          >
                             <%= stats[veracity_key] %> <span class="hidden">&times; <%= veracity_label %></span>
                           </a>
                         <% end %>
@@ -59,8 +67,18 @@
           </div>
         <% end %>
 
-        <%= render(partial: "statement/detail", collection: segment.filtered_published_statements(@statements_filters), as: :statement) %>
+        <div class="statements-list">
+          <% filtered_statements = segment.filtered_published_statements(@statements_filters) %>
+          <h2>
+            <% if not @statements_filters.empty? %>
+              <%= filtered_statements.length %>
+              z celkově
+            <% end %>
+            <%= segment.all_published_statements.count %> ověřených výroků
+          </h2>
+          <%= render(partial: "statement/detail", collection: filtered_statements, as: :statement) %>
+        </div>
       <% end %>
-    <% end %>
-  </section>
+    </section>
+  <% end %>
 </article>
