Add DemagogTV banner to one article

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -209,6 +209,7 @@ p.lead {
   .speaker {
     display: block;
     flex: 0 0 80px;
+    text-align: center;
 
     .portrait {
       margin-left: 5px;
