Fix speaker overview layout
Closes #252

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -136,6 +136,10 @@
 
   article {
     grid-column: 3 / 11;
+
+    &.is-speaker-overview {
+      grid-column: 1 / 9;
+    }
   }
 
   .speakers-list {
