--- a/app/views/speaker/index.html.erb
+++ b/app/views/speaker/index.html.erb
@@ -1,4 +1,4 @@
-<article>
+<article class="is-speaker-overview">
   <% if @party  %>
     <h2><%= @party.name %></h2>
     <section class="speakers-list">
