Source statements segments in db schema and displaying

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -210,7 +210,7 @@
       grid-column: 3 / 11;
     }
 
-    section.segment-statements_set {
+    section.segment-source_statements {
       grid-column: 1 / -1;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
