Temporarily hide IFCN badge

--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -25,6 +25,7 @@
   </p>
 </aside>
 
+<%# IFCN badge is temporarily hidden, because we are waiting for revalidation
 <aside class="organizations" id="ifcn">
   <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
   <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
@@ -39,3 +40,4 @@
       })();
   </script>
 </aside>
+%>
