Error pages, attempt 2

--- a/app/views/error/internal_server_error.html.erb
+++ b/app/views/error/internal_server_error.html.erb
@@ -1,5 +1,5 @@
 <article style="margin-bottom: 200px">
-  <h1>Houstone, máme problém</h1>
+  <h1>Tady vidím velký špatný</h1>
   <p>
     Něco se pokazilo a naši ajťáci už pracují na řešení. Omlouváme se
     za problémy. Zastavte se prosím za chvíli.
