Return correct response http code, update texts, bring back static error pages in case we need them

--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -4,5 +4,5 @@
     Pokud jste se sem doklikali z&nbsp;webu Demagog.cz, je to chyba a&nbsp;brzy
     ji opravíme. Pokud jste zadali adresu do prohlížeče ručně, zkontrolujte ji prosím.
   </p>
-  <a href="/">← Zpět na Demagog.cz</a>
+  <a href="/">← Zpět na úvodní stránku</a>
 </article>
