Replace partner Zakony pro lidi with NFNZ

--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -16,8 +16,8 @@
     <a title="Little Gretta" href="http://littlegreta.co.uk/">
       <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
     </a>
-    <a title="Zákony pro lidi" href="http://www.zakonyprolidi.cz">
-      <img class="lazy-load" data-src="<%= asset_path("partners/zakony-pro-lidi.png") %>" />
+    <a title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
+      <img class="lazy-load" data-src="<%= asset_path("partners/nfnz.svg") %>" />
     </a>
     <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
       <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
