Whole promise row clickable; scrolling shadows for explanation box

--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -3,36 +3,12 @@
 <article class="detail">
   <section class="intro">
     <h1>Sliby Sobotkovy vlády (2014—2017)</h1>
-    <%#
     <p>
       S končícím volebním obdobím zpracoval Demagog.cz unikátní analýzu,
       nakolik koalice ČSSD, hnutí ANO a KDU-ČSL splnila závazky, které
       si na začátku volebního období sama vytyčila. Pečlivě jsme
       prostudovali programové prohlášení vlády a koaliční smlouvu a identifikovali
-      jsme přesně 156 měřitelných slibů, a to napříč rezorty. Můžete si tak přečíst,
-      jak si vláda vedla v plnění slibů na poli bezpečnosti, zahraniční politiky,
-      zdravotnictví, školství, práva a státní správy, hospodářství a ekonomiky,
-      zemědělství i životního prostředí.
-    </p>
-    <p>
-      U každého jsme na základě dohledávání primárních zdrojů informací zkoumali,
-      zda se jej koalici podařilo naplnit (<a href="/sliby-sobotkovy-vlady/metodika">kompletní metodika</a>).
-      Pro potřeby tohoto
-      výstupu pracujeme s třemi hodnotícími kategoriemi – jde o sliby splněné,
-      částečně splněné a nesplněné (více v metodice). Cílem hodnocení není říct,
-      zda vláda byla dobrá, nebo špatná. To si rozhodne každý volič 20. a 21. října
-      u volební urny. Naším cílem bylo nabídnout veřejnosti tvrdá data a poctivou
-      analýzu namísto impulsivních a zkratkovitých hodnocení, která s sebou nese
-      rozbíhající se předvolební kampaň. Z výsledků vyplývá, že vláda splnila 51 %
-      verifikovatelných slibů a naopak nesplnila 38 % z toho, co si vytyčila v koaliční smlouvě.
-    </p>
-    %>
-    <p>
-      S končícím volebním obdobím zpracoval Demagog.cz unikátní analýzu,
-      nakolik koalice ČSSD, hnutí ANO a KDU-ČSL splnila závazky, které
-      si na začátku volebního období sama vytyčila. Pečlivě jsme
-      prostudovali programové prohlášení vlády a koaliční smlouvu a identifikovali
-      jsme přesně 50 měřitelných slibů, a to napříč rezorty. Můžete si tak přečíst,
+      jsme přesně <%= @allCount %> měřitelných slibů, a to napříč rezorty. Můžete si tak přečíst,
       jak si vláda vedla v plnění slibů na poli bezpečnosti, zahraniční politiky,
       zdravotnictví, školství, práva a státní správy, hospodářství a ekonomiky,
       zemědělství i životního prostředí.
