Fixed column widths

--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -121,10 +121,10 @@
     <table class="promises-list-section-table">
       <thead>
         <tr>
-          <th style="width: 45%"></th>
-          <th>Oblast</th>
-          <th>Hodnocení</th>
           <th></th>
+          <th style="width: 140px">Oblast</th>
+          <th style="width: 170px">Hodnocení</th>
+          <th style="width: 120px"></th>
         </tr>
       </thead>
       <tbody>
