Second promises update

--- a/app/assets/stylesheets/promises.scss
+++ b/app/assets/stylesheets/promises.scss
@@ -415,6 +415,11 @@
           pointer-events: none;
         }
       }
+
+      cite {
+        margin: 7px 15px;
+        color: #6E658A;
+      }
     }
   }
 
