--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -4,12 +4,20 @@
 @import "veracity";
 
 @import "fonts";
-@import "base";
-@import "nav";
 
-// layout
+@import "base";
 @import "layout";
 
-// identify & remove
-// @import "obsolete";
+@import "homepage/cover_story";
 
+@import "page/show";
+
+@import "shared/nav";
+@import "shared/partners";
+@import "shared/speaker_stat";
+
+@import "speaker/index";
+@import "speaker/listed";
+@import "speaker/show";
+
+@import "statement/show";
