--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -1,4 +1,4 @@
-<section class="statement-detail <% if @statement.important? %>important-statement<% end %>">
+<section class="container-statement-show <% if @statement.important? %>important-statement<% end %>">
   <a href="<%= speaker_path(@statement.speaker.id) %>" class="speaker">
     <%= render(partial: 'shared/portrait', object: @statement.speaker, as: :speaker) %>
     <span class="name"><%= @statement.speaker.full_name %></span>
