--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -16,10 +16,6 @@
     margin: calc(2 * var(--gutter)) 0;
   }
 
-  .organizations {
-    padding-top: var(--gutter);
-  }
-
   article img {
     max-width: 100%;
   }
@@ -35,19 +31,6 @@
   #twitter, #facebook {
     display: none;
   }
-
-  .statement-detail .statement-content blockquote {
-    margin-top: 0;
-
-    &.oneliner-statement {
-      margin-top: 0;
-    }
-
-    // Hide CSS arrow
-    &:after {
-      display: none;
-    }
-  }
 }
 
 @media (min-width: 900px) {
@@ -60,12 +43,21 @@
   }
 
   article.preview {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-column-gap: var(--gap);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
-    h2 {
-      margin-top: 0;
+    .illustration {
+      flex: 1 0 0px;
+    }
+
+    .rest {
+      flex: 2 0 0px;
+      margin-left: var(--gap);
+
+      h2 {
+        margin-top: 0;
+      }
     }
   }
 
@@ -81,93 +73,58 @@
   }
 
   .container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: var(--gutter);
-    grid-row-gap: 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin: 3rem auto;
     max-width: 1000px;
     box-sizing: border-box;
   }
 
   header {
-    grid-column: 1 / 6;
-    grid-row: 1;
+    flex: 5 0 0px;
   }
 
   #main-menu {
-    grid-column: 6 / -1;
-    grid-row: 1;
+    flex: 7 0 0px;
+    margin-left: 50px;
   }
 
   article,
   nav.pagination,
   .full-width {
-    grid-column: 1 / -1;
+    flex: 1 0 100%;
+    margin-top: 3rem;
   }
 
-  aside {
-    grid-column: span 6;
+  #twitter, #facebook {
+    flex: 1 0 50%;
+    max-width: 50%; // for IE11 not respecting border-box with flex-basis
+    box-sizing: border-box;
   }
 
-  #supporters {
-    grid-column: 1 / 7;
+  #twitter {
+    margin-top: 3rem;
+    padding-right: 25px;
   }
 
-  #supporters, #partners {
-    margin-top: 6rem;
+  #facebook {
+    margin-top: 3rem;
+    padding-left: 25px;
   }
 
   #interesting-statements {
-    display: grid;
-    grid-column: 1 / 9;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: var(--gutter);
+    flex: 1 0 66.66666667%;
+    margin-top: 3rem;
 
     h2 {
-      grid-column: span 2;
       margin: 0 0 1rem;
     }
   }
 
   #darujme-widget {
-    grid-column: 9 / -1;
-  }
-
-  article {
-    grid-column: 3 / 11;
-
-    &.is-speaker-overview {
-      grid-column: 1 / 9;
-    }
-  }
-
-  .speakers-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: var(--gutter);
-    grid-row-gap: var(--gap);
-
-    p {
-      color: var(--violet);
-    }
-
-    &:hover {
-
-    }
-
-    .speaker {
-      display: grid;
-      grid-template-columns: var(--small-portrait) 1fr;
-      grid-column-gap: var(--gap);;
-    }
-
-    .name {
-      color: var(--orange);
-      font-size: var(--medium-typesize);
-      font-weight: bold;
-      margin: 0.25em 0 0;
-    }
+    flex: 1 0 33.33333333%;
+    margin-top: 3rem;
   }
 
   article > h1:first-child,
@@ -176,88 +133,45 @@
     margin-top: 0;
   }
 
-  .statement-detail {
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: var(--gap);
-
-    .speaker {
-      grid-column: 1 / 3;
-      align-self: flex-start;
-    }
-
-    .statement-content {
-      grid-column: 3 / 11;
-    }
-  }
-
   .meta {
-    grid-column: 9 / -1;
+    flex: 1 0 25%;
   }
 
   article.detail {
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: var(--gap);
+    flex: 1 0 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
     section.intro {
-      grid-column: 3 / 11;
+      flex: 1 0 66.66666667%;
+      margin-left: 16.66666667%;
+      margin-right: 16.66666667%;
     }
 
     section.segment-text {
-      grid-column: 3 / 11;
+      flex: 1 0 66.66666667%;
+      margin-left: 16.66666667%;
+      margin-right: 16.66666667%;
     }
 
     section.segment-source_statements {
-      grid-column: 1 / -1;
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-column-gap: var(--gap);
+      flex: 1 0 100%;
+      display: flex;
 
       .statements-filters {
-        grid-column: 1 / 6;
+        flex: 5 0 0px;
       }
 
       .statements-list {
-        grid-column: 6 / -1;
+        flex: 7 0 0px;
+        margin-left: var(--gap);
       }
     }
   }
 
   article.preview {
-    grid-column: 1 / -1;
-  }
-
-  article.cover-story {
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: var(--gap);
-
-    h1 {
-      grid-column: 1 / -1;
-      grid-row: 1;
-    }
-
-    figure {
-      grid-column: 5 / -1;
-      grid-row: 2;
-    }
-
-    .perex {
-      grid-column: 1 / 5;
-      grid-row: 2;
-    }
-
-    .speakers {
-      grid-column: 1 / -1;
-      grid-row: 3;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-column-gap: var(--gutter);
-      grid-row-gap: var(--gap);
-    }
+    margin-top: 3rem;
+    flex: 1 0 100%;
   }
 }
