--- a/app/assets/stylesheets/shared/_nav.scss
+++ b/app/assets/stylesheets/shared/_nav.scss
@@ -13,7 +13,7 @@
   }
 
   #tm:checked + ul {
-    display: grid;
+    display: flex;
   }
 
   input[type="checkbox"],
@@ -39,6 +39,10 @@
     margin: 0;
     border: solid white;
     border-width: 0 0 1px;
+  }
+
+  #toggle-menu {
+    white-space: nowrap;
   }
 
   li,
@@ -94,6 +98,7 @@
 
   #search {
     display: flex;
+    flex-direction: row;
 
     input,
     a {
@@ -105,10 +110,13 @@
     }
 
     input {
+      flex: 1 0 0px;
+      min-width: 5rem;
       max-width: 7rem;
     }
 
     a {
+      flex: 0 0 auto;
       padding: 0 0.5rem;
       background-color: var(--silver);
       color: var(--jumbo);
@@ -127,17 +135,20 @@
     }
 
     #toggle-menu {
-      float: right;
-      padding: 0.5rem 0 0.5rem;
-      margin-top: 2rem;
+      position: absolute;
+      top: 55px;
+      right: 15px;
+      cursor: pointer;
     }
 
     & > ul {
       clear: right;
+      margin-top: -60px;
+      flex-direction: column;
+      align-items: flex-end;
     }
 
     & > ul > li {
-      width: 100%;      
       box-sizing: border-box;
       display: block;
       padding: 0;
@@ -161,16 +172,9 @@
       margin: 1rem 0 0;
     }
 
-    .sub-menu li {
-      width: auto;
-    }
-
     #search {
-      float: right;
-
       input,
       a {
-        max-width: none;
         font-size: var(--medium-typesize);
       }
     }
@@ -178,9 +182,17 @@
 
   @media only screen and (min-width: 900px) {
     ul {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-column-gap: 0;
+      flex: 1 0 100%;
+      display: flex;
+      flex-direction: row;
+
+      li {
+        flex: 1 0 0px;
+
+        &.search {
+          flex-basis: 80px;
+        }
+      }
     }
 
     & > ul > li > ul > li {
@@ -208,9 +220,6 @@
     .sub-menu,
     input[type="checkbox"]:checked + .sub-menu {
       display: none;
-    }
-
-    .sub-menu li {
     }
 
     .sub-menu .sub-menu {
