--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </a>
 
-  <div>
+  <div class="rest">
     <div class="speakers">
         <% for speaker in article.unique_speakers %>
           <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
