--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -52,7 +52,7 @@
         </ul>
       </li>
     <% end %>
-    <li>
+    <li class="search">
       <form id="search" onsubmit="searchFn(); return false;">
         <script>
           function searchFn() {
