--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -1,37 +1,39 @@
-<aside class="organizations" id="supporters">
-  <h2>Projekt Demagog.cz podporují:</h2>    
-  <p>
-    <a title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
-      <img class="lazy-load" data-src="<%= asset_path("partners/nfnz.svg") %>" />
-    </a>
-  </p>
-</aside>
+<div class="container-shared-partners">
+  <aside class="organizations" id="supporters">
+    <h2>Projekt Demagog.cz podporují:</h2>
+    <p>
+      <a title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
+        <img class="lazy-load" data-src="<%= asset_path("partners/nfnz.svg") %>" />
+      </a>
+    </p>
+  </aside>
 
-<aside class="organizations" id="partners">
-  <h2>Projekt Demagog.cz spolupracuje s:</h2>
-  <p>
-    <a title="Little Gretta" href="http://littlegreta.co.uk/">
-      <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
-    </a>
-    <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
-      <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
-    </a>
-  </p>
-</aside>
+  <aside class="organizations" id="partners">
+    <h2>Projekt Demagog.cz spolupracuje s:</h2>
+    <p>
+      <a title="Little Gretta" href="http://littlegreta.co.uk/">
+        <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
+      </a>
+      <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
+        <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
+      </a>
+    </p>
+  </aside>
 
-<%# IFCN badge is temporarily hidden, because we are waiting for revalidation
-<aside class="organizations" id="ifcn">
-  <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
-  <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
-  <script type="text/javascript">
-    (function() {
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.async = true;
-      s.src = 'https://cdn.youracclaim.com/assets/utilities/embed.js';
-      var o = document.getElementsByTagName('script')[0];
-      o.parentNode.insertBefore(s, o);
-      })();
-  </script>
-</aside>
-%>
+  <%# IFCN badge is temporarily hidden, because we are waiting for revalidation
+  <aside class="organizations" id="ifcn">
+    <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
+    <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
+    <script type="text/javascript">
+      (function() {
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'https://cdn.youracclaim.com/assets/utilities/embed.js';
+        var o = document.getElementsByTagName('script')[0];
+        o.parentNode.insertBefore(s, o);
+        })();
+    </script>
+  </aside>
+  %>
+</div>
