Production-ready promises

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -12,6 +12,9 @@
 
 @import "page/show";
 
+@import "promises/methodology";
+@import "promises/overview";
+
 @import "shared/nav";
 @import "shared/partners";
 @import "shared/speaker_stat";
