--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,7 +8,7 @@
   Struct::Submenu.new(
     'Speciály',
     [
-      Struct::Link.new('Vládní sliby 2014—17', 'https://extra.demagog.cz/vladni-sliby/'),
+      Struct::Link.new('Vládní sliby 2014—17', '/sliby/sobotkova-vlada'),
       Struct::Link.new('Sliby Miloše Zemana', 'https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/')
     ]
   ),
