Consistency between methodology and overview

--- a/app/views/promises/_sobotkova_vlada_methodology.html.erb
+++ b/app/views/promises/_sobotkova_vlada_methodology.html.erb
@@ -46,7 +46,7 @@
     <br>
   </li>
   <li>
-    <strong>Nesplněný slib</strong><br>
+    <strong>Porušený slib</strong><br>
     Vládní koalice v rozporu se svým závazkem neučinila příslušné kroky, nebo
     naopak činila něco, čemuž se zavázala předcházet.<br>
     <br>
