--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -20,6 +20,7 @@
               <%= (
                 {
                   PromiseRating::FULFILLED => "splněných",
+                  PromiseRating::IN_PROGRESS => "průběžně plněných",
                   PromiseRating::PARTIALLY_FULFILLED => "částečně splněných",
                   PromiseRating::BROKEN => "porušených",
                   PromiseRating::STALLED => "nerealizovaných"
@@ -88,6 +89,7 @@
               <%= (
                 {
                   PromiseRating::FULFILLED => "splněné",
+                  PromiseRating::IN_PROGRESS => "průběžně plněné",
                   PromiseRating::PARTIALLY_FULFILLED =>  "částečně splněné",
                   PromiseRating::BROKEN => "porušené",
                   PromiseRating::STALLED => "nerealizované"
